Added assets and fix rename issues

--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
   <meta name="viewport" content="width=device-width"/>
-  <meta property="og:title" content="Smart Card CRM">
+  <meta property="og:title" content="Reisen Gruppe">
   <meta property="og:description" content="Somos el camino mas corto entre los sue&ntilde;os y la realidad.">
-  <title>Smart Card</title>
+  <title>Reisen Gruppe</title>
   <base href="/">
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet"/>
